Added and updated responsive part

--- a/index.html
+++ b/index.html
@@ -320,6 +320,14 @@
           <div></div>
           <div></div>
         </div>
+        <div class="dots-mobile">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </section>
       <section class="whyUs featurePdt">
         <span>Featured Products</span>
@@ -349,15 +357,20 @@
             <div class="loaded-div2">
               <div>Headphones</div>
               <span>$999.00</span><span>$3,299.00</span>
-              <div>
+              <div class="cart-row">
                 <input type="number" min="1" max="20" value="1" />
-                <div>
+
+                <div class="qty-buttons">
                   <button><i class="fa-solid fa-angle-up"></i></button>
                   <button><i class="fa-solid fa-angle-down"></i></button>
                 </div>
+
                 <button class="add-to-cart">ADD TO CART</button>
-                <i class="fa-solid fa-heart"></i>
-                <i class="fa-solid fa-code-compare"></i>
+
+                <div class="cart-icons">
+                  <i class="fa-solid fa-heart"></i>
+                  <i class="fa-solid fa-code-compare"></i>
+                </div>
               </div>
             </div>
             <div class="last-div">
@@ -374,15 +387,20 @@
             <div class="loaded-div2">
               <div>Women's Maria Pump</div>
               <span>$425.00</span><span></span>
-              <div>
+              <div class="cart-row">
                 <input type="number" min="1" max="20" value="1" />
-                <div>
+
+                <div class="qty-buttons">
                   <button><i class="fa-solid fa-angle-up"></i></button>
                   <button><i class="fa-solid fa-angle-down"></i></button>
                 </div>
+
                 <button class="add-to-cart">ADD TO CART</button>
-                <i class="fa-solid fa-heart"></i>
-                <i class="fa-solid fa-code-compare"></i>
+
+                <div class="cart-icons">
+                  <i class="fa-solid fa-heart"></i>
+                  <i class="fa-solid fa-code-compare"></i>
+                </div>
               </div>
             </div>
             <div class="last-div">
@@ -399,15 +417,20 @@
             <div class="loaded-div2">
               <div>Toshiba 5009 Smart TV</div>
               <span>$0.00</span><span></span>
-              <div>
+              <div class="cart-row">
                 <input type="number" min="1" max="20" value="1" />
-                <div>
+
+                <div class="qty-buttons">
                   <button><i class="fa-solid fa-angle-up"></i></button>
                   <button><i class="fa-solid fa-angle-down"></i></button>
                 </div>
+
                 <button class="add-to-cart">ADD TO CART</button>
-                <i class="fa-solid fa-heart"></i>
-                <i class="fa-solid fa-code-compare"></i>
+
+                <div class="cart-icons">
+                  <i class="fa-solid fa-heart"></i>
+                  <i class="fa-solid fa-code-compare"></i>
+                </div>
               </div>
             </div>
             <div class="last-div">
@@ -424,15 +447,20 @@
             <div class="loaded-div2">
               <div>Leica Digital Camera</div>
               <span>$2189.00</span><span></span>
-              <div>
+              <div class="cart-row">
                 <input type="number" min="1" max="20" value="1" />
-                <div>
+
+                <div class="qty-buttons">
                   <button><i class="fa-solid fa-angle-up"></i></button>
                   <button><i class="fa-solid fa-angle-down"></i></button>
                 </div>
+
                 <button class="add-to-cart">ADD TO CART</button>
-                <i class="fa-solid fa-heart"></i>
-                <i class="fa-solid fa-code-compare"></i>
+
+                <div class="cart-icons">
+                  <i class="fa-solid fa-heart"></i>
+                  <i class="fa-solid fa-code-compare"></i>
+                </div>
               </div>
             </div>
             <div class="last-div">
@@ -442,6 +470,14 @@
           </div>
         </div>
         <div class="dots">
+          <div></div>
+          <div></div>
+        </div>
+        <div class="dots-mobile">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
           <div></div>
           <div></div>
         </div>
@@ -554,6 +590,14 @@
               <div></div>
               <div></div>
             </div>
+            <div class="dots-mobile featureCategory">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
           </div>
         </div>
       </section>
@@ -579,31 +623,31 @@
               alt="Melissa Johnsson"
             />
           </div>
-          <div class="brand-card">
+          <div class="brand-card hide">
             <img
               src="https://plus.unsplash.com/premium_photo-1669077046750-bef49171b059?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=880"
               alt="HTC"
             />
           </div>
-          <div class="brand-card">
+          <div class="brand-card hide">
             <img
               src="https://plus.unsplash.com/premium_photo-1669075652104-4f0763796446?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=880"
               alt="Superbrand"
             />
           </div>
-          <div class="brand-card">
+          <div class="brand-card hide">
             <img
               src="https://images.unsplash.com/photo-1617468264204-92588bd6485a?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
               alt="Sony"
             />
           </div>
-          <div class="brand-card">
+          <div class="brand-card hide">
             <img
               src="https://plus.unsplash.com/premium_photo-1749200412744-df6cf06f0496?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1165"
               alt="New York"
             />
           </div>
-          <div class="brand-card">
+          <div class="brand-card hide">
             <img
               src="https://images.unsplash.com/photo-1644105637454-4943bc520c6a?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2071"
               alt="Sunglasses"
@@ -612,6 +656,14 @@
         </div>
 
         <div class="dots brand-dots">
+          <div></div>
+          <div></div>
+        </div>
+        <div class="dots-mobile featureCategory">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
           <div></div>
           <div></div>
         </div>
@@ -720,7 +772,7 @@
             <a href="#" class="read-more">Read More →</a>
           </div>
 
-          <div class="blog-card">
+          <div class="blog-card hide">
             <div class="blog-img">
               <div class="date-badge">02<br />Aug</div>
               <img
@@ -744,7 +796,7 @@
             <a href="#" class="read-more">Read More →</a>
           </div>
 
-          <div class="blog-card">
+          <div class="blog-card hide">
             <div class="blog-img">
               <div class="date-badge">02<br />Aug</div>
               <img
@@ -772,6 +824,14 @@
           <div></div>
           <div></div>
         </div>
+        <div class="dots-mobile featureCategory">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </section>
       <section class="whyUs aboutUs">
         <span>What are people saying about us</span>
@@ -787,7 +847,7 @@
             </p>
             <p>- charlibaltimore</p>
           </div>
-          <div>
+          <div class="aboutUs hide">
             <i class="fa-solid fa-quote-left"></i>
             <p>
               I am a web developer for many years i haven't seen anything clear
@@ -796,7 +856,7 @@
             </p>
             <p>- chromebandit</p>
           </div>
-          <div>
+          <div class="whyUs aboutUs hide">
             <i class="fa-solid fa-quote-left"></i>
             <p>
               Great toolkit for Opencart. As a base platform, Opencart can be a
@@ -807,6 +867,14 @@
           </div>
         </div>
         <div class="dots blog-dots">
+          <div></div>
+          <div></div>
+        </div>
+        <div class="dots-mobile featureCategory">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
           <div></div>
           <div></div>
         </div>
@@ -847,7 +915,7 @@
               </div>
             </div>
           </div>
-          <div>
+          <div class="whyUs mostViewed hide">
             <img
               src="https://images.unsplash.com/photo-1535043934128-cf0b28d52f95?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
               alt="Viewed 3"
@@ -862,7 +930,7 @@
               </div>
             </div>
           </div>
-          <div>
+          <div class="whyUs mostViewed hide">
             <img
               src="https://images.unsplash.com/photo-1759166447139-b816226ca312?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
               alt="Viewed 4"
